--- a/DerbyManagement.App/App.xaml
+++ b/DerbyManagement.App/App.xaml
@@ -7,6 +7,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <converter:DoNothingConverter x:Key="localDoNothingConverter"></converter:DoNothingConverter>
+            <converter:DivisionListToStringConverter x:Key="localDivisionListToStringConverter"></converter:DivisionListToStringConverter>
             <local:ViewModelLocator x:Key="mainViewModelLocator"></local:ViewModelLocator>
             <ResourceDictionary.MergedDictionaries>
                 <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
