--- a/DerbyManagement.App/Views/RacerView.xaml
+++ b/DerbyManagement.App/Views/RacerView.xaml
@@ -9,7 +9,8 @@
              d:DesignHeight="300" d:DesignWidth="300" 
              DataContext="{Binding Source={StaticResource mainViewModelLocator},  Path=RacerViewModel}">
     <Grid>
-        <DataGrid Margin="5,10,5,5"
+        <DataGrid Margin="5,10,5,5" 
+                  HorizontalAlignment="Center"
                       HeadersVisibility="Column"
                       AutoGenerateColumns="False"
                       ItemsSource="{Binding Racers}"
