--- a/DerbyManagement.App/Views/RacerDetailView.xaml
+++ b/DerbyManagement.App/Views/RacerDetailView.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DerbyManagement.App.Views"
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         mc:Ignorable="d"
         Title="Derby Management" Height="600" Width="800"
+        BorderBrush="{DynamicResource AccentColorBrush}" BorderThickness="1"
         DataContext="{Binding Source={StaticResource mainViewModelLocator},  Path=RacerDetailViewModel}">
     <Grid Margin="5">
         <Grid.ColumnDefinitions>
@@ -24,14 +26,58 @@
         <Label Grid.Row="1" Content="Car Name" FontWeight="Bold"></Label>
         <Label Grid.Row="2" Content="Owner Name" FontWeight="Bold"></Label>
         <Label Grid.Row="3" Content="Divisions" FontWeight="Bold"></Label>
-        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding SelectedRacer.CarNumber, Mode=TwoWay}" 
+        <TextBox Grid.Row="0" Grid.Column="1" Margin="5" 
+                 Text="{Binding SelectedRacer.CarNumber, Mode=TwoWay}" 
                  Width="60" HorizontalAlignment="Left"></TextBox>
-        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding SelectedRacer.CarName, Mode=TwoWay}"></TextBox>
-        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding SelectedRacer.OwnerName, Mode=TwoWay}"></TextBox>
-        <StackPanel Grid.Row="4" Grid.Column="1" HorizontalAlignment="Right" Orientation="Horizontal">
+        <TextBox Grid.Row="1" Grid.Column="1" Margin="5" 
+                 Text="{Binding SelectedRacer.CarName, Mode=TwoWay}"></TextBox>
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="5" 
+                 Text="{Binding SelectedRacer.OwnerName, Mode=TwoWay}"></TextBox>
+        <Grid Grid.Row="3" Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Button Content="Add Division"></Button>
+            <ListView Grid.Row="1" Margin="5"
+            ItemsSource="{Binding SelectedRacer.Divisions}" Name="ListViewPeople">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn>
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Name}"></TextBlock>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                        <GridViewColumn>
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Content="Delete"/>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+        </Grid>
+        <StackPanel Grid.Row="4" Grid.Column="1" Margin="5" 
+                    HorizontalAlignment="Right" Orientation="Horizontal">
             <Button Content="Save and Add Another Racer"></Button>
-            <Button Content="Save and Close"></Button>
-            <Button Content="Cancel"></Button>
+            <Button Content="Save and Close">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="Click">
+                        <i:InvokeCommandAction Command="{Binding SaveCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </Button>
+            <Button Content="Cancel">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="Click">
+                        <i:InvokeCommandAction Command="{Binding CancelCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </Button>
         </StackPanel>
     </Grid>
 </controls:MetroWindow>
