--- a/DerbyManagement.App/Views/RacerDetailView.xaml
+++ b/DerbyManagement.App/Views/RacerDetailView.xaml
@@ -19,13 +19,15 @@
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Content="Car Number" FontWeight="Bold"></Label>
         <Label Grid.Row="1" Content="Car Name" FontWeight="Bold"></Label>
-        <Label Grid.Row="2" Content="Owner Name" FontWeight="Bold"></Label>
-        <Label Grid.Row="3" Content="Divisions" FontWeight="Bold"></Label>
+        <Label Grid.Row="2" Content="Owner First Name" FontWeight="Bold"></Label>
+        <Label Grid.Row="3" Content="Owner Last Name" FontWeight="Bold"></Label>
+        <Label Grid.Row="4" Content="Divisions" FontWeight="Bold"></Label>
         <TextBox Grid.Row="0" Grid.Column="1" Margin="5" 
                  Text="{Binding CarNumber, Mode=TwoWay}" 
                  Width="60" HorizontalAlignment="Left">
@@ -42,8 +44,10 @@
         <TextBox Grid.Row="1" Grid.Column="1" Margin="5" 
                  Text="{Binding CarName, Mode=TwoWay}"></TextBox>
         <TextBox Grid.Row="2" Grid.Column="1" Margin="5" 
-                 Text="{Binding OwnerName, Mode=TwoWay}"></TextBox>
-        <Grid Grid.Row="3" Grid.Column="1">
+                 Text="{Binding OwnerFirstName, Mode=TwoWay}"></TextBox>
+        <TextBox Grid.Row="3" Grid.Column="1" Margin="5" 
+                 Text="{Binding OwnerLastName, Mode=TwoWay}"></TextBox>
+        <Grid Grid.Row="4" Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
@@ -71,7 +75,7 @@
                 </ListView.View>
             </ListView>
         </Grid>
-        <StackPanel Grid.Row="4" Grid.Column="1" Margin="5" 
+        <StackPanel Grid.Row="5" Grid.Column="1" Margin="5" 
                     HorizontalAlignment="Right" Orientation="Horizontal">
             <Button Content="Save and Add Another Racer"></Button>
             <Button Content="Save and Close" Command="{Binding SaveCommand}">
