--- a/DerbyManagement.App/Views/RacerDetailView.xaml
+++ b/DerbyManagement.App/Views/RacerDetailView.xaml
@@ -12,7 +12,7 @@
         DataContext="{Binding Source={StaticResource mainViewModelLocator},  Path=RacerDetailViewModel}">
     <Grid Margin="5">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="100"></ColumnDefinition>
+            <ColumnDefinition Width="auto"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -23,11 +23,11 @@
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <Label Grid.Row="0" Content="Car Number" FontWeight="Bold"></Label>
-        <Label Grid.Row="1" Content="Car Name" FontWeight="Bold"></Label>
-        <Label Grid.Row="2" Content="Owner First Name" FontWeight="Bold"></Label>
-        <Label Grid.Row="3" Content="Owner Last Name" FontWeight="Bold"></Label>
-        <Label Grid.Row="4" Content="Divisions" FontWeight="Bold"></Label>
+        <Label Grid.Row="0" Content="Car Number" FontWeight="Bold" Margin="5"></Label>
+        <Label Grid.Row="1" Content="Car Name" FontWeight="Bold" Margin="5"></Label>
+        <Label Grid.Row="2" Content="Owner First Name" FontWeight="Bold" Margin="5"></Label>
+        <Label Grid.Row="3" Content="Owner Last Name" FontWeight="Bold" Margin="5"></Label>
+        <Label Grid.Row="4" Content="Divisions" FontWeight="Bold" Margin="5"></Label>
         <TextBox Grid.Row="0" Grid.Column="1" Margin="5" 
                  Text="{Binding CarNumber, Mode=TwoWay}" 
                  Width="60" HorizontalAlignment="Left">
@@ -44,37 +44,34 @@
         <TextBox Grid.Row="1" Grid.Column="1" Margin="5" 
                  Text="{Binding CarName, Mode=TwoWay}"></TextBox>
         <TextBox Grid.Row="2" Grid.Column="1" Margin="5" 
-                 Text="{Binding OwnerFirstName, Mode=TwoWay}"></TextBox>
+                 Text="{Binding OwnerFirstName, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnDataErrors=True}">
+            <Validation.ErrorTemplate>
+                <ControlTemplate>
+                    <StackPanel Orientation="Vertical">
+                        <!-- Placeholder for the TextBox itself -->
+                        <AdornedElementPlaceholder x:Name="textBox"/>
+                        <TextBlock Text="{Binding [0].ErrorContent}" Foreground="Red" Margin="5"/>
+                    </StackPanel>
+                </ControlTemplate>
+            </Validation.ErrorTemplate>
+        </TextBox>
         <TextBox Grid.Row="3" Grid.Column="1" Margin="5" 
                  Text="{Binding OwnerLastName, Mode=TwoWay}"></TextBox>
-        <Grid Grid.Row="4" Grid.Column="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-            </Grid.RowDefinitions>
-            <Button Content="Add Division"></Button>
-            <ListView Grid.Row="1" Margin="5"
-            ItemsSource="{Binding Divisions}" Name="ListViewPeople">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn>
-                            <GridViewColumn.CellTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding Name}"></TextBlock>
-                                </DataTemplate>
-                            </GridViewColumn.CellTemplate>
-                        </GridViewColumn>
-                        <GridViewColumn>
-                            <GridViewColumn.CellTemplate>
-                                <DataTemplate>
-                                    <Button Content="Delete"/>
-                                </DataTemplate>
-                            </GridViewColumn.CellTemplate>
-                        </GridViewColumn>
-                    </GridView>
-                </ListView.View>
-            </ListView>
-        </Grid>
+
+        <ListView Grid.Row="4" Grid.Column="1" Margin="5"
+            ItemsSource="{Binding Divisions}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn>
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}"></TextBlock>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                </GridView>
+            </ListView.View>
+        </ListView>
         <StackPanel Grid.Row="5" Grid.Column="1" Margin="5" 
                     HorizontalAlignment="Right" Orientation="Horizontal">
             <Button Content="Save and Add Another Racer"></Button>
