--- a/DerbyManagement.App/App.xaml
+++ b/DerbyManagement.App/App.xaml
@@ -8,9 +8,10 @@
         <ResourceDictionary>
             <converter:DoNothingConverter x:Key="localDoNothingConverter"></converter:DoNothingConverter>
             <converter:DivisionListToStringConverter x:Key="localDivisionListToStringConverter"></converter:DivisionListToStringConverter>
+            <converter:DivisionToBooleanConverter x:Key="localDivisionToBooleanConverter"></converter:DivisionToBooleanConverter>
             <local:ViewModelLocator x:Key="mainViewModelLocator"></local:ViewModelLocator>
             <ResourceDictionary.MergedDictionaries>
-                <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
+                <!-- MahApps.Metro resource dictionarie. Make sure that all file names are Case Sensitive! -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
