--- a/DerbyManagement.App/Views/DivisionDetailView.xaml
+++ b/DerbyManagement.App/Views/DivisionDetailView.xaml
@@ -6,18 +6,38 @@
         xmlns:local="clr-namespace:DerbyManagement.App.Views"
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
-        Title="Derby Management" Height="600" Width="800"
+        Title="Derby Management" Height="220" Width="500"
         BorderBrush="{DynamicResource AccentColorBrush}" BorderThickness="1"
         DataContext="{Binding Source={StaticResource mainViewModelLocator},  Path=DivisionDetailViewModel}">
     <Grid>
-        <StackPanel>
-            <TextBlock>This is the division detail view.</TextBlock>
-            <StackPanel Margin="5" 
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Label Grid.Row="0" Content="Name" FontWeight="Bold" Margin="5"></Label>
+        <Label Grid.Row="1" Content="Order" FontWeight="Bold" Margin="5"></Label>
+        <Label Grid.Row="2" Content="Include in Championship" FontWeight="Bold" Margin="5"></Label>
+        <Label Grid.Row="3" Content="Is the Championship" FontWeight="Bold" Margin="5"></Label>
+
+        <TextBox Grid.Row="0" Grid.Column="1" Margin="5" 
+                 Text="{Binding Name, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnDataErrors=True}"></TextBox>
+        <TextBox Grid.Row="1" Grid.Column="1" Margin="5"  Width="60" HorizontalAlignment="Left"
+                 Text="{Binding Sequence, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnDataErrors=True}"></TextBox>
+        <CheckBox Grid.Row="2" Grid.Column="1" Margin="5" 
+                  IsChecked="{Binding IncludeInChampionship, Mode=TwoWay}"></CheckBox>
+        <CheckBox Grid.Row="3" Grid.Column="1" Margin="5" 
+                  IsChecked="{Binding IsChampionship, Mode=TwoWay}"></CheckBox>
+        <StackPanel Margin="4" Grid.Row="5" Grid.ColumnSpan="2"
                     HorizontalAlignment="Right" Orientation="Horizontal">
-                <Button Content="Save and Add Another Racer" Command="{Binding SaveAndAddCommand}"></Button>
-                <Button Content="Save and Close" Command="{Binding SaveCommand}"></Button>
-                <Button Content="Cancel" Command="{Binding CancelCommand}"></Button>
-            </StackPanel>
+            <Button Content="Save and Close" Command="{Binding SaveCommand}"></Button>
+            <Button Content="Cancel" Command="{Binding CancelCommand}"></Button>
         </StackPanel>
     </Grid>
 </controls:MetroWindow>
